[gd_scene load_steps=94 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://UFO.tscn" type="PackedScene" id=2]
[ext_resource path="res://song.ogg" type="AudioStream" id=3]
[ext_resource path="res://Unique.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://background/bg_starburst_aqua_iphone.png" type="Texture" id=5]
[ext_resource path="res://background/bg_starburst_black_iphone.png" type="Texture" id=6]
[ext_resource path="res://background/bg_starburst_blue_iphone.png" type="Texture" id=7]
[ext_resource path="res://background/bg_starburst_green_light_iphone.png" type="Texture" id=8]
[ext_resource path="res://background/bg_starburst_green_med_iphone.png" type="Texture" id=9]
[ext_resource path="res://background/bg_starburst_orange_iphone.png" type="Texture" id=10]
[ext_resource path="res://background/bg_starburst_red_iphone.png" type="Texture" id=11]
[ext_resource path="res://background/bg_starburst_pink_iphone.png" type="Texture" id=12]
[ext_resource path="res://UFO2.gd" type="Script" id=13]
[ext_resource path="res://hit.wav" type="AudioStream" id=14]
[ext_resource path="res://monster/monster_01_A_attack_01.png" type="Texture" id=15]
[ext_resource path="res://monster/monster_01_A_attack_02.png" type="Texture" id=16]
[ext_resource path="res://monster/monster_01_A_attack_03.png" type="Texture" id=17]
[ext_resource path="res://monster/monster_01_A_idle.png" type="Texture" id=18]
[ext_resource path="res://monster/monster_01_A_walk_01.png" type="Texture" id=19]
[ext_resource path="res://monster/monster_01_A_walk_02.png" type="Texture" id=20]
[ext_resource path="res://monster/monster_01_A_walk_03.png" type="Texture" id=21]
[ext_resource path="res://monster/monster_01_A_walk_04.png" type="Texture" id=22]
[ext_resource path="res://UFO3.gd" type="Script" id=23]
[ext_resource path="res://monster/monster_01_C_attack_01.png" type="Texture" id=24]
[ext_resource path="res://monster/monster_01_C_attack_02.png" type="Texture" id=25]
[ext_resource path="res://monster/monster_01_C_attack_03.png" type="Texture" id=26]
[ext_resource path="res://monster/monster_01_C_fly_01.png" type="Texture" id=27]
[ext_resource path="res://monster/monster_01_C_fly_02.png" type="Texture" id=28]
[ext_resource path="res://monster/monster_01_C_fly_03.png" type="Texture" id=29]
[ext_resource path="res://monster/monster_01_C_fly_04.png" type="Texture" id=30]
[ext_resource path="res://monster/monster_01_C_idle.png" type="Texture" id=31]
[ext_resource path="res://UFO4.gd" type="Script" id=32]
[ext_resource path="res://monster/monster_02_A_attack_01.png" type="Texture" id=33]
[ext_resource path="res://monster/monster_02_A_attack_02.png" type="Texture" id=34]
[ext_resource path="res://monster/monster_02_A_attack_03.png" type="Texture" id=35]
[ext_resource path="res://monster/monster_02_A_idle.png" type="Texture" id=36]
[ext_resource path="res://monster/monster_02_A_walk_01.png" type="Texture" id=37]
[ext_resource path="res://monster/monster_02_A_walk_02.png" type="Texture" id=38]
[ext_resource path="res://UFO5.gd" type="Script" id=39]
[ext_resource path="res://monster/monster_02_B_attack_01.png" type="Texture" id=40]
[ext_resource path="res://monster/monster_02_B_attack_02.png" type="Texture" id=41]
[ext_resource path="res://monster/monster_02_B_attack_03.png" type="Texture" id=42]
[ext_resource path="res://monster/monster_02_B_idle.png" type="Texture" id=43]
[ext_resource path="res://monster/monster_02_B_walk_01.png" type="Texture" id=44]
[ext_resource path="res://monster/monster_02_B_walk_02.png" type="Texture" id=45]
[ext_resource path="res://monster/monster_02_B_walk_03.png" type="Texture" id=46]
[ext_resource path="res://monster/monster_02_B_walk_04.png" type="Texture" id=47]
[ext_resource path="res://monster/monster_02_B_walk_05.png" type="Texture" id=48]
[ext_resource path="res://monster/monster_02_B_walk_06.png" type="Texture" id=49]
[ext_resource path="res://UFO6.gd" type="Script" id=50]
[ext_resource path="res://monster/monster_02_C_attack_01.png" type="Texture" id=51]
[ext_resource path="res://monster/monster_02_C_attack_02.png" type="Texture" id=52]
[ext_resource path="res://monster/monster_02_C_attack_03.png" type="Texture" id=53]
[ext_resource path="res://monster/monster_02_C_idle.png" type="Texture" id=54]
[ext_resource path="res://monster/monster_02_C_walk_01.png" type="Texture" id=55]
[ext_resource path="res://monster/monster_02_C_walk_02.png" type="Texture" id=56]
[ext_resource path="res://monster/monster_02_C_walk_03.png" type="Texture" id=57]
[ext_resource path="res://monster/monster_02_C_walk_04.png" type="Texture" id=58]
[ext_resource path="res://BUG.gd" type="Script" id=59]
[ext_resource path="res://bugblue/bug_2_01.png" type="Texture" id=60]
[ext_resource path="res://bugblue/bug_2_02.png" type="Texture" id=61]
[ext_resource path="res://bugblue/bug_2_03.png" type="Texture" id=62]
[ext_resource path="res://bugblue/bug_2_04.png" type="Texture" id=63]
[ext_resource path="res://bugblue/bug_2_05.png" type="Texture" id=64]
[ext_resource path="res://bugblue/leafbeetle_1.png" type="Texture" id=65]
[ext_resource path="res://bugblue/leafbeetle_2.png" type="Texture" id=66]
[ext_resource path="res://bugblue/leafbeetle_3.png" type="Texture" id=67]
[ext_resource path="res://bugblue/leafbeetle_4.png" type="Texture" id=68]
[ext_resource path="res://bugblue/leafbeetle_5.png" type="Texture" id=69]
[ext_resource path="res://bugblue/stinkbug_1.png" type="Texture" id=70]
[ext_resource path="res://bugblue/stinkbug_2.png" type="Texture" id=71]
[ext_resource path="res://bugblue/stinkbug_3.png" type="Texture" id=72]
[ext_resource path="res://bugblue/stinkbug_4.png" type="Texture" id=73]
[ext_resource path="res://bugblue/stinkbug_5.png" type="Texture" id=74]
[ext_resource path="res://flatDark43.png" type="Texture" id=75]
[ext_resource path="res://flatDark41.png" type="Texture" id=76]
[ext_resource path="res://flatDark46.png" type="Texture" id=77]
[ext_resource path="res://Explosion8.ogg" type="AudioStream" id=78]
[ext_resource path="res://Lost-Jungle_Looping.ogg" type="AudioStream" id=79]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 736.91, 392.322 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "New Anim",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 44.9744

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 29.6578, 46.1222 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Main" type="Node2D"]
position = Vector2( 0, 2.05054 )
script = ExtResource( 1 )

[node name="UFO" parent="." instance=ExtResource( 2 )]
position = Vector2( 523.616, 243.857 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 607.987, 309.632 )
scale = Vector2( 1.18623, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -80.5099, -9.24042 )
scale = Vector2( 0.843006, 1 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 23.0

[node name="ClicksLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.85098, 0.12549, 0.12549, 1 )
custom_colors/font_outline_modulate = Color( 0.137255, 0.0470588, 0.0470588, 1 )
custom_colors/font_color_shadow = Color( 0.223529, 0.717647, 0.0627451, 1 )
text = "Score: 0"

[node name="LoseLabel" type="Label" parent="."]
margin_left = 372.0
margin_top = 192.0
margin_right = 770.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.847059, 0.117647, 0.117647, 1 )
custom_colors/font_outline_modulate = Color( 0.729412, 0.0509804, 0.0509804, 1 )
custom_colors/font_color_shadow = Color( 0.878431, 0.564706, 0.564706, 1 )
text = "you lose!"

[node name="background" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="background"]
position = Vector2( 533.581, 296.072 )
rotation = -1.57079
scale = Vector2( 1, 1.0401 )
z_index = -7
frames = SubResource( 4 )
animation = "New Anim"
frame = 5
speed_scale = 0.1
playing = true

[node name="UFO2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 345.239, 376.731 )
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UFO2"]
position = Vector2( 0, 0.699299 )
shape = SubResource( 5 )

[node name="HITSound" type="AudioStreamPlayer2D" parent="UFO2"]
stream = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="UFO2"]
position = Vector2( 1.14443, -3.1579 )
scale = Vector2( 0.580048, 0.886905 )
frames = SubResource( 6 )
frame = 7
playing = true
flip_v = true

[node name="UFO3" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 81.7606, 492.735 )
script = ExtResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UFO3"]
position = Vector2( 0, 0.699299 )
shape = SubResource( 5 )

[node name="HITSound" type="AudioStreamPlayer2D" parent="UFO3"]
stream = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="UFO3"]
position = Vector2( -0.698322, -0.349157 )
scale = Vector2( 0.48918, 0.639193 )
frames = SubResource( 7 )
playing = true
flip_v = true

[node name="UFO4" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 544.999, 417.999 )
script = ExtResource( 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UFO4"]
position = Vector2( 0, 0.699299 )
shape = SubResource( 5 )

[node name="HITSound" type="AudioStreamPlayer2D" parent="UFO4"]
stream = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="UFO4"]
position = Vector2( 3.5, -3 )
scale = Vector2( 0.591744, 0.638096 )
frames = SubResource( 8 )
frame = 4
playing = true

[node name="UFO5" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 793.08, 119.483 )
script = ExtResource( 39 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UFO5"]
position = Vector2( 0, 0.699299 )
shape = SubResource( 9 )

[node name="HITSound" type="AudioStreamPlayer2D" parent="UFO5"]
stream = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="UFO5"]
position = Vector2( -0.51336, -5.59338 )
scale = Vector2( 0.42202, 0.714286 )
frames = SubResource( 10 )
frame = 4
playing = true

[node name="UFO6" type="Area2D" parent="."]
position = Vector2( 940.896, 488.695 )
script = ExtResource( 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UFO6"]
position = Vector2( 0, 0.699299 )
shape = SubResource( 5 )

[node name="HITSound" type="AudioStreamPlayer2D" parent="UFO6"]
stream = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="UFO6"]
position = Vector2( -1.35374, 1.80501 )
scale = Vector2( 0.457673, 0.544453 )
frames = SubResource( 11 )
playing = true

[node name="BUG" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 236.295, 181.766 )
script = ExtResource( 59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BUG"]
position = Vector2( 0, 0.699299 )
shape = SubResource( 5 )

[node name="HITSound" type="AudioStreamPlayer2D" parent="BUG"]
stream = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BUG"]
position = Vector2( -2.14554, -0.955679 )
scale = Vector2( 0.561876, 0.366939 )
frames = SubResource( 12 )
frame = 3
playing = true

[node name="BUG2" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 481.679, 115.875 )
script = ExtResource( 59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BUG2"]
position = Vector2( 0, 0.699299 )
shape = SubResource( 5 )

[node name="HITSound" type="AudioStreamPlayer2D" parent="BUG2"]
stream = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BUG2"]
position = Vector2( 0.312866, -0.981522 )
scale = Vector2( 0.593271, 0.579667 )
frames = SubResource( 13 )
playing = true

[node name="BUG3" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 865.057, 304.241 )
script = ExtResource( 59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BUG3"]
position = Vector2( 0, 0.699299 )
shape = SubResource( 5 )

[node name="HITSound" type="AudioStreamPlayer2D" parent="BUG3"]
stream = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BUG3"]
position = Vector2( 0.312866, -0.981522 )
scale = Vector2( 0.593271, 0.579667 )
frames = SubResource( 13 )
frame = 4
playing = true
flip_v = true

[node name="BUG4" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 712.696, 474.287 )
script = ExtResource( 59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BUG4"]
position = Vector2( 0, 0.699299 )
shape = SubResource( 5 )

[node name="HITSound" type="AudioStreamPlayer2D" parent="BUG4"]
stream = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BUG4"]
position = Vector2( -0.173706, 3.54407 )
scale = Vector2( 0.570293, 0.351221 )
frames = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.466667 )
margin_left = 903.567
margin_top = -1.67018
margin_right = 1023.57
margin_bottom = 52.3298
icon = ExtResource( 75 )

[node name="Button2" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 903.567
margin_top = 60.1265
margin_right = 1023.57
margin_bottom = 114.126
icon = ExtResource( 76 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.360784, 0.231373, 0.231373, 0.882353 )

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 918.599
margin_top = 123.593
margin_right = 1010.6
margin_bottom = 209.593
icon = ExtResource( 77 )

[node name="CanvasModulate2" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.960784, 0.160784, 0.160784, 1 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 78 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 79 )
autoplay = true
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="UFO2" to="UFO2" method="_on_UFO_input_event"]
[connection signal="input_event" from="UFO3" to="UFO3" method="_on_UFO_input_event"]
[connection signal="input_event" from="UFO4" to="UFO4" method="_on_UFO_input_event"]
[connection signal="input_event" from="UFO5" to="UFO5" method="_on_UFO_input_event"]
[connection signal="input_event" from="UFO6" to="UFO6" method="_on_UFO_input_event"]
[connection signal="input_event" from="BUG" to="BUG" method="_on_UFO_input_event"]
[connection signal="input_event" from="BUG2" to="BUG2" method="_on_UFO_input_event"]
[connection signal="input_event" from="BUG3" to="BUG3" method="_on_UFO_input_event"]
[connection signal="input_event" from="BUG4" to="BUG4" method="_on_UFO_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
